--- a/client/src/app/admin/database-list/database-list.component.scss
+++ b/client/src/app/admin/database-list/database-list.component.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 30%;
+  width: 20%;
   height: 100%;
   background-color: antiquewhite;
   display: flex;
@@ -22,7 +22,7 @@
   }
   .userName {
     width: 100%;
-    padding: 1vw;
+    padding: .5vw;
     box-sizing: border-box;
     background-color: rgb(212, 212, 212);
     display: flex;
